Use git submodules instead of Cocoapods I'm still not decided about Pods. On the one hand they're a big hammer for a relatively small problem, requiring changes to the project file(s) and the way you interact with it. On the other hand, if a git repo goes away, your submodule is gone and you better hope someone has a checkout that they can use to reconstitute the loss.
I think the second option is most reliable, since the required sources can be hard-checked-in if a repo disappears since the project is probably dead if that happens anyway.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "TMBO/lib/iso-8601-date-formatter"]
 	path = TMBO/lib/iso-8601-date-formatter
 	url = git://github.com/boredzo/iso-8601-date-formatter.git
+[submodule "TMBO/lib/AFNetworking"]
+	path = TMBO/lib/AFNetworking
+	url = git://github.com/AFNetworking/AFNetworking.git
