--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "TMBO/lib/AFNetworking"]
 	path = TMBO/lib/AFNetworking
 	url = git://github.com/AFNetworking/AFNetworking.git
+[submodule "TMBO/lib/debugger"]
+	path = TMBO/lib/debugger
+	url = git@github.com:numist/Debugger.git
