Animated GIF support (and more!) TMBOUpload now provides a more appropriate mechanism for getting images, and the view controller uses it!

--- a/.gitmodules
+++ b/.gitmodules
@@ -9,4 +9,4 @@
 	url = git@github.com:numist/Debugger.git
 [submodule "TMBO/lib/UIImageView-NDVAnimatedGIFSSupport"]
 	path = TMBO/lib/UIImageView-NDVAnimatedGIFSSupport
-	url = git://github.com/atnan/UIImageView-NDVAnimatedGIFSupport.git
+	url = git@github.com:numist/UIImageView-NDVAnimatedGIFSupport.git
